# rust-rpi-rgb-led-matrix

./: .gitmodules  CHANGELOG.md  Cargo.toml
.github/workflows/: rust.yml  update-rpi-rgb-led-matrix.yml
examples/: c-api-basic.rs  embedded-graphics-basic.rs
rpi-led-matrix/: Cargo.toml
rpi-led-matrix-sys/: Cargo.toml  build.rs
rpi-led-matrix/examples/: c-api-basic.rs  embedded-graphics-basic.rs
rpi-led-matrix/src/: args.rs  canvas.rs  font.rs  matrix.rs  options.rs
rpi-rgb-led-matrix-sys/: Cargo.toml  build.rs
rpi-rgb-led-matrix-sys/src/: lib.rs  types.rs
rust-rpi-rgb-led-matrix/: Cargo.toml
rust-rpi-rgb-led-matrix/src/: args.rs  c.rs  lib.rs  matrix.rs  options.rs
src/: c.rs  led_color.rs  lib.rs
